DOBCalc 프로젝트 완성
분단위 나이 계산기

--- a/DOBCalc/app/src/main/res/layout/activity_main.xml
+++ b/DOBCalc/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonDatePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
@@ -49,6 +49,16 @@
         android:textSize="18sp" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="선택된 날짜"
+        android:textColor="#cccccc"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvSelectedDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -61,12 +71,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="선택된 날짜"
+        android:text="분"
         android:textColor="#cccccc"
         android:textSize="20sp"
         android:textStyle="bold" />
-
     <TextView
+        android:id="@+id/tvAgeInMinutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -75,14 +85,6 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="선택된 날짜"
-        android:textColor="#cccccc"
-        android:textSize="20sp"
-        android:textStyle="bold" />
 
 
 </LinearLayout>
